force-app/main/default/objects/Project__c/fields/Custo__c.field-meta.xml
<CustomField>
    <fullName>Custo__c</fullName>
    <label>Custo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>