force-app/main/default/objects/Project__c/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <label>Tecnologia</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Docker</fullName>
            </value>
            <value>
                <fullName>Flutter</fullName>
            </value>
            <value>
                <fullName>Go</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Kotlin</fullName>
            </value>
            <value>
                <fullName>Kubernetes</fullName>
            </value>
            <value>
                <fullName>MongoDB</fullName>
            </value>
            <value>
                <fullName>Node.js</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Pl/SQL</fullName>
            </value>
            <value>
                <fullName>PostgreSQL</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP ABAP</fullName>
            </value>
            <value>
                <fullName>SQL Server</fullName>
            </value>
            <value>
                <fullName>Swift</fullName>
            </value>
            <value>
                <fullName>TypeScript</fullName>
            </value>
            <value>
                <fullName>Vue.js</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>