force-app/main/default/objects/Project__c/fields/Valor_Projeto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Projeto__c</fullName>
    <label>Valor do Projeto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>